Closed
Bug 12882
Opened 26 years ago
Closed 26 years ago
International sort doesn't work for Address Book
Categories
(MailNews Core :: Internationalization, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M11
People
(Reporter: marina, Assigned: chuang)
Details
Steps to reproduce:
-open ABook;
-enter three new cards with those entries: "Poline Viardo", "Póline Viardo" and
"Puline Viardo";
-the correct order for the ascending sorting would be :
Poline Viardo
Póline Viardo
Puline Viardo
but Address Book does it incorrectly :
Poline
Puline
Póline
Updated•26 years ago
|
Assignee: nhotta → phil
Comment 1•26 years ago
|
||
In my debug build, I didn't see collation keys were generated. While the
collation comparison function was called with not keys but with original strings
(e.g. display names).
Address book sorting should sort like thread pane sort (sort by using
application locale).
Reassign to phil@netscape.com.
Updated•26 years ago
|
Assignee: phil → chuang
Comment 2•26 years ago
|
||
Reassign to chuang, cc hangas
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
International sort is working in 09/22/99 build, marking as verified
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•