Fix Bug 12882 International sort doesn't work for Address Book